--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!doctype html>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Demo</title>
+ </head>
+ <body class="center">
+  <input type="file"> 
 <h2 style="text-align: center;">PRIVACY POLICY</h2> 
 <h4>General</h4> 
 <p>This privacy policy governs your use of the software application "Panthayam" for mobile devices. We know you care about your personal information, so we have prepared this privacy policy (our “Privacy Policy”) to explain how we collect, use and share it. By using or accessing the Service, you agree to the terms of this Privacy Policy.</p>
@@ -48,3 +56,5 @@
 <p>&nbsp;</p> 
 <h4>Contact us</h4> 
 <p>If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at&nbsp;jaxxvarghese@gmail.com.</p>
+</body>
+  </html>
